// Generated by ReScript, PLEASE EDIT WITH CARE
'use strict';

var Jest = require("@glennsl/bs-jest/lib/js/src/jest.js");
var React = require("react");
var ReactTestingLibrary = require("../src/ReactTestingLibrary.js");

function ReactTestingLibraryTest$Dummy(Props) {
  return React.createElement("div", undefined, React.createElement("label", undefined, "Choose a color"), React.createElement("select", undefined, React.createElement("option", undefined, "Red"), React.createElement("option", undefined, "Green"), React.createElement("option", undefined, "Blue")));
}

var Dummy = {
  make: ReactTestingLibraryTest$Dummy
};

function setup(param) {
  return ReactTestingLibrary.renderElement(undefined, undefined, undefined, undefined, undefined, React.createElement(ReactTestingLibraryTest$Dummy, {}));
}

Jest.test("render red option", (function (param) {
        return Jest.Expect.toMatchSnapshot(Jest.Expect.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Red", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, setup(undefined))));
      }));

Jest.test("render red option", (function (param) {
        return Jest.Expect.toMatchSnapshot(Jest.Expect.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Green", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, setup(undefined))));
      }));

Jest.test("render red option", (function (param) {
        return Jest.Expect.toMatchSnapshot(Jest.Expect.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Blue", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, setup(undefined))));
      }));

exports.Dummy = Dummy;
exports.setup = setup;
/*  Not a pure module */
